doc/windows/VB6.0/32bit/multi_card/gts.bas

Attribute VB_Name = "gts"

Public Const DLL_VERSION_0 As Integer = 2
Public Const DLL_VERSION_1 As Integer = 1
Public Const DLL_VERSION_2 As Integer = 0
Public Const DLL_VERSION_3 As Integer = 1
Public Const DLL_VERSION_4 As Integer = 5
Public Const DLL_VERSION_5 As Integer = 0
Public Const DLL_VERSION_6 As Integer = 6
Public Const DLL_VERSION_7 As Integer = 0
Public Const DLL_VERSION_8 As Integer = 7

Public Const MC_NONE As Integer = -1

Public Const MC_LIMIT_POSITIVE As Integer = 0
Public Const MC_LIMIT_NEGATIVE As Integer = 1
Public Const MC_ALARM As Integer = 2
Public Const MC_HOME As Integer = 3
Public Const MC_GPI As Integer = 4
Public Const MC_ARRIVE As Integer = 5
Public Const MC_MPG As Integer = 6

Public Const MC_ENABLE As Integer = 10
Public Const MC_CLEAR As Integer = 11
Public Const MC_GPO As Integer = 12

Public Const MC_DAC As Integer = 20
Public Const MC_STEP As Integer = 21
Public Const MC_PULSE As Integer = 22
Public Const MC_ENCODER As Integer = 23
Public Const MC_ADC As Integer = 24

Public Const MC_AXIS As Integer = 30
Public Const MC_PROFILE As Integer = 31
Public Const MC_CONTROL As Integer = 32

Public Const CAPTURE_HOME As Integer = 1
Public Const CAPTURE_INDEX As Integer = 2
Public Const CAPTURE_PROBE As Integer = 3
Public Const CAPTURE_HSIO0 As Integer = 6
Public Const CAPTURE_HSIO1 As Integer = 7
Public Const CAPTURE_HOME_GPI As Integer = 8

Public Const PT_MODE_STATIC As Integer = 0
Public Const PT_MODE_DYNAMIC As Integer = 1

Public Const PT_SEGMENT_NORMAL As Integer = 0
Public Const PT_SEGMENT_EVEN As Integer = 1
Public Const PT_SEGMENT_STOP As Integer = 2

Public Const GEAR_MASTER_ENCODER As Integer = 1
Public Const GEAR_MASTER_PROFILE As Integer = 2
Public Const GEAR_MASTER_AXIS As Integer = 3

Public Const FOLLOW_MASTER_ENCODER As Integer = 1
Public Const FOLLOW_MASTER_PROFILE As Integer = 2
Public Const FOLLOW_MASTER_AXIS As Integer = 3

Public Const FOLLOW_EVENT_START As Integer = 1
Public Const FOLLOW_EVENT_PASS As Integer = 2

Public Const GEAR_EVENT_START As Integer = 1
Public Const GEAR_EVENT_PASS As Integer = 2
Public Const GEAR_EVENT_AREA As Integer = 5

Public Const FOLLOW_SEGMENT_NORMAL As Integer = 0
Public Const FOLLOW_SEGMENT_EVEN As Integer = 1
Public Const FOLLOW_SEGMENT_STOP As Integer = 2
Public Const FOLLOW_SEGMENT_CONTINUE As Integer = 3

Public Const INTERPOLATION_AXIS_MAX = 4
Public Const CRD_FIFO_MAX = 4096
Public Const FIFO_MAX = 2
Public Const CRD_MAX = 2
Public Const CRD_OPERATION_DATA_EXT_MAX = 2

Public Const CRD_OPERATION_TYPE_NONE = 0
Public Const CRD_OPERATION_TYPE_BUF_IO_DELAY = 1
Public Const CRD_OPERATION_TYPE_LASER_ON = 2
Public Const CRD_OPERATION_TYPE_LASER_OFF = 3
Public Const CRD_OPERATION_TYPE_BUF_DA = 4
Public Const CRD_OPERATION_TYPE_LASER_CMD = 5
Public Const CRD_OPERATION_TYPE_LASER_FOLLOW = 6
Public Const CRD_OPERATION_TYPE_LMTS_ON = 7
Public Const CRD_OPERATION_TYPE_LMTS_OFF = 8
Public Const CRD_OPERATION_TYPE_SET_STOP_IO = 9
Public Const CRD_OPERATION_TYPE_BUF_MOVE = 10
Public Const CRD_OPERATION_TYPE_BUF_GEAR = 11
Public Const CRD_OPERATION_TYPE_SET_SEG_NUM = 12
Public Const CRD_OPERATION_TYPE_STOP_MOTION = 13
Public Const CRD_OPERATION_TYPE_SET_VAR_VALUE = 14
Public Const CRD_OPERATION_TYPE_JUMP_NEXT_SEG = 15
Public Const CRD_OPERATION_TYPE_SYNCH_PRF_POS = 16
Public Const CRD_OPERATION_TYPE_VIRTUAL_TO_ACTUAL = 17
Public Const CRD_OPERATION_TYPE_SET_USER_VAR = 18
Public Const CRD_OPERATION_TYPE_SET_DO_BIT_PULSE = 19
Public Const CRD_OPERATION_TYPE_BUF_COMPAREPULSE = 20
Public Const CRD_OPERATION_TYPE_LASER_ON_EX = 21
Public Const CRD_OPERATION_TYPE_LASER_OFF_EX = 22
Public Const CRD_OPERATION_TYPE_LASER_CMD_EX = 23
Public Const CRD_OPERATION_TYPE_LASER_FOLLOW_RATIO_EX = 24
Public Const CRD_OPERATION_TYPE_LASER_FOLLOW_MODE = 25
Public Const CRD_OPERATION_TYPE_LASER_FOLLOW_OFF = 26
Public Const CRD_OPERATION_TYPE_LASER_FOLLOW_OFF_EX = 27
Public Const CRD_OPERATION_TYPE_LASER_FOLLOW_SPLINE = 28
Public Const CRD_OPERATION_TYPE_MOTION_DATA = 29

Public Const CRD_OPERATION_TYPE_BUF_TREND = 50

Public Const CRD_OPERATION_TYPE_BUF_EVENT_ON = 70
Public Const CRD_OPERATION_TYPE_BUF_EVENT_OFF = 71

Public Const INTERPOLATION_MOTION_TYPE_LINE = 0
Public Const INTERPOLATION_MOTION_TYPE_CIRCLE = 1
Public Const INTERPOLATION_MOTION_TYPE_HELIX = 2
Public Const INTERPOLATION_MOTION_TYPE_CIRCLE_3D = 3

Public Const INTERPOLATION_CIRCLE_PLAT_XY = 0
Public Const INTERPOLATION_CIRCLE_PLAT_YZ = 1
Public Const INTERPOLATION_CIRCLE_PLAT_ZX = 2

Public Const INTERPOLATION_HELIX_CIRCLE_XY_LINE_Z = 0
Public Const INTERPOLATION_HELIX_CIRCLE_YZ_LINE_X = 1
Public Const INTERPOLATION_HELIX_CIRCLE_ZX_LINE_Y = 2

Public Const INTERPOLATION_CIRCLE_DIR_CW = 0
Public Const INTERPOLATION_CIRCLE_DIR_CCW = 1
Public Const COMPARE_PORT_HSIO As Integer = 0
Public Const COMPARE_PORT_GPO As Integer = 1

Public Const COMPARE2D_MODE_2D As Integer = 1
Public Const COMPARE2D_MODE_1D As Integer = 0

Public Const INTERFACEBOARD20 As Integer = 2
Public Const INTERFACEBOARD30 As Integer = 3

Public Const AXIS_LASER As Integer = 7
Public Const AXIS_LASER_EX As Integer = 8

Public Const LASER_CTRL_MODE_PWM1 As Integer = 0
Public Const LASER_CTRL_FREQUENCY As Integer = 1
Public Const LASER_CTRL_VOLTAGE As Integer = 2
Public Const LASER_CTRL_MODE_PWM2 As Integer = 3

Public Const CRD_BUFFER_MODE_DYNAMIC_DEFAULT = 0
Public Const CRD_BUFFER_MODE_DYNAMIC_KEEP = 1
Public Const CRD_BUFFER_MODE_STATIC_INPUT = 11
Public Const CRD_BUFFER_MODE_STATIC_READY = 12
Public Const CRD_BUFFER_MODE_STATIC_START = 13

Public Const CRD_SMOOTH_MODE_NONE = 0
Public Const CRD_SMOOTH_MODE_PERCENT = 1
Public Const CRD_SMOOTH_MODE_JERK = 2

Public Type TTrapPrm
    acc As Double
    dec As Double
    velStart As Double
    smoothTime As Integer
End Type

Public Type TJogPrm
    acc As Double
    dec As Double
    smooth As Double
End Type

Public Type TPid
    kp As Double
    ki As Double
    kd As Double
    kvff As Double
    kaff As Double

    integralLimit As Long
    derivativeLimit As Long
    limit As Integer
End Type

Public Type TThreadSts
    run As Integer
    errorValue As Integer
    dumb1 As Integer
    result As Double
    line As Integer
End Type

Public Type TVarInfo
    id As Integer
    dataType As Integer
    dumb1 As Integer
    dumb2 As Integer
    name0 As Double
    name1 As Double
    name2 As Double
    name3 As Double
End Type

Public Type TCompileInfo
    pFileName As String
    pLineNo1 As Integer
    pLineNo2 As Integer
    pMessage As String
End Type

Public Type TCrdPrm
    dimension As Integer
    profile1 As Integer
    profile2 As Integer
    profile3 As Integer
    profile4 As Integer
    profile5 As Integer
    profile6 As Integer
    profile7 As Integer
    profile8 As Integer
    dumb1 As Integer
    dumb2 As Integer
    dumb3 As Integer
    synVelMax As Double
    synAccMax As Double
    evenTime As Integer
    setOriginFlag As Integer
    originPos1 As Long
    originPos2 As Long
    originPos3 As Long
    originPos4 As Long
    originPos5 As Long
    originPos6 As Long
    originPos7 As Long
    originPos8 As Long
End Type

Public Type TCrdBufOperation
    flag As Integer
    delay As Integer
    doType As Integer
    doMask As Integer  '请用16进制表示，如&HFFF
    doValue As Integer  '请用16进制表示，如&HFFF
    dataExt1 As Integer
    dataExt2 As Integer
    dumb3 As Integer
End Type

Public Type TCrdData
    motionType As Integer
    circlePlat As Integer
    posX As Long
    posY As Long
    posZ As Long
    posA As Long
    radius As Double
    circleDir As Integer
    dumb0 As Integer
    dumb1 As Integer
    dumb2 As Integer
    lCenterX As Double
    lCenterY As Double
    lCenterZ As Double
    vel As Double
    acc As Double
    velEndZero As Integer
    dumb3 As Integer
    dumb4 As Integer
    dumb5 As Integer
    operation As TCrdBufOperation

    CosX As Double
    CosY As Double
    CosZ As Double
    CosA As Double
    velEnd As Double
    velEndAdjust As Double
    r As Double
End Type

Public Type TTrigger
    encoder As Integer
    probeType As Integer
    probeIndex As Integer
    offset As Integer
    windowOnly As Integer
    firstPosition As Long
    lastPosition As Long
End Type

Public Type TTriggerStatus
    execute As Integer
    done As Integer
    position As Long
End Type

Public Type TTriggerStatusEx
    execute As Integer
    done As Integer
    position As Long
    clock As Long
    loopCount As Long
End Type

Public Type T2DCompareData
    px As Integer
    py As Integer
End Type

Public Type T2DComparePrm
    encx As Integer
    ency As Integer
    source As Integer
    outputType As Integer
    startLevel As Integer
    time As Integer
    maxerr As Integer
    threshold As Integer
End Type

Public Type TCrdTime
		time As Double
		segmentUsed As Long
		segmentHead As Long
		segmentTail As Long
End Type

Public Type TCrdSmoothInfo
		enable As Integer
		smoothMode As Integer
		percent As Integer
		accStartPercent As Integer
		decEndPercent As Integer
		jerkMax As Double
End Type

Public Type TCrdSmooth
		percent As Integer
		accStartPercent As Integer
		decEndPercent As Integer
		reserve As Double
End Type

Public Declare Function GT_GetDllVersion Lib "gts.dll" (ByVal cardNum As Integer,ByRef pDllVersion As String) As Integer
Public Declare Function GT_SetCardNo Lib "gts.dll" (ByVal cardNum As Integer,ByVal index As Integer) As Integer
Public Declare Function GT_GetCardNo Lib "gts.dll" (ByVal cardNum As Integer,ByRef pIndex As Integer) As Integer

Public Declare Function GT_GetVersion Lib "gts.dll" (ByVal cardNum As Integer,ByRef pVersion As String) As Integer
Public Declare Function GT_GetInterfaceBoardSts Lib "gts.dll" (ByVal cardNum As Integer,ByRef pStatus As Integer) As Integer
Public Declare Function GT_SetInterfaceBoardSts Lib "gts.dll" (ByVal cardNum As Integer,ByVal interfaceType As Integer) As Integer

Public Declare Function GT_Open Lib "gts.dll" (ByVal cardNum As Integer,Optional ByVal channel As Integer = 0, Optional ByVal param As Integer = 1) As Integer
Public Declare Function GT_Close Lib "gts.dll" (ByVal cardNum As Integer) As Integer

Public Declare Function GT_LoadConfig Lib "gts.dll" (ByVal cardNum As Integer,ByVal pFile As String) As Integer
